# image-classification-variants

./: README.md  pyproject.toml
src/computer_vision/: __init__.py  registry.py
src/computer_vision/lab/: augmentation.py  data.py  layers.py  utils.py
src/computer_vision/lab/models/: base.py  baseline.py
src/computer_vision/lab/models/backbones/: __init__.py  base.py  efficient_net.py  transformer.py
