[tool.poetry]
name = "image_classification_variants"
version = "0.1.0"
description = ""
authors = ["gcuder <gerald@itranslate.com>"]
packages = [{ include = "computer_vision", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.11.0"
tensorflow-addons = "^0.19.0"
pydantic = "^1.10.4"
tensorflow-datasets = "^4.8.2"
transformers = "^4.26.0"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
coremltools = "^6.2"
datasets = "^2.9.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
